@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

left to right direction

skinparam classAttributeIconSize 0

hide circle
'hide methods

title Domain Model USEI02 - Simulator Without Priority


class Simulator {
    itemList
    machineList
    addOperationToQueue()
    createQueues()
    updateMachines()
    printQueue()
    printMachineStatus()
    assignItemToMachine()
}

class Item {
    itemID : ID
    operationList : Queue<Operation>
    currentOperation: Operation
    getNextOperation()
    getCurrentOperation()
}


class Operation {
    operationName : String
    duration : float
}

class Machine{
    idMachine : ID
    operation : Operation
    proccessingSpeed : float
    available : boolean
    timeLeftToFinish: float
    currentProcessingItem : Item
    processItem(Item item)
    updateMachine()
    resetMachine()
    printStatus()

}


Item "1" -- "*" Operation : has >
Machine "1" - "         1" Operation: execute >
Simulator "1" -- "1..*" Item : has >
Simulator "1" -- "1..*" Machine : has >

@enduml